--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
   },
