--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "build": "esbuild src/worker.ts --bundle --minify --platform=node --target=node16 --outfile=dist/index.js",
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "dev": "wrangler dev"
   },
   "type": "module",
   "devDependencies": {
