--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,11 +10,9 @@
   },
   "type": "module",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230419.0",
+    "@cloudflare/workers-types": "^4.20250816.0",
+    "esbuild": "^0.25.9",
     "typescript": "^5.0.4",
-    "wrangler": "^3.0.1",
-    "esbuild": "latest",
-    "firebase-admin": "*",
-    "eslint-config-custom": "*"
+    "wrangler": "^4.30.0"
   }
 }
