--- a/package.json
+++ b/package.json
@@ -4,15 +4,9 @@
     "build": "turbo build",
     "start": "turbo start",
     "dev": "turbo dev",
-    "deploy": "turbo deploy",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "deploy": "turbo deploy"
   },
   "devDependencies": {
-    "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "*",
-    "prettier": "^2.5.1",
     "turbo": "^2.5.6"
   },
   "name": "buildtray",
